<resources>
    <string name="app_name">MyConsume</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">用户名</string>
    <string name="nav_header_subtitle">email</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">退出登录</string>

    <string name="menu_home">主页</string>
    <string name="menu_gallery">月账单管理</string>
    <string name="menu_slideshow">历史账单</string>

    <string name="home_second">Home Second</string>
    <string name="loading">MyConsume</string>
    <string name="login">登录</string>
    <string name="login_input_username_hint">用户名</string>
    <string name="hint_password">密码</string>
    <string name="login_hold_hint">自动登录</string>
    <string name="login_forget_hint">忘记密码？</string>
    <string name="login_register_hint">注册</string>
    <string name="login_other_hint">其他方式登录</string>
    <string name="register_input_username_hint">手机号</string>
    <string name="register_username_hint">用户名</string>
    <string name="register_sms_auth_code">短信验证码</string>
    <string name="register_sms_hint">获取验证码</string>
    <string name="register_sms_wait_hint">别激动,休息一下呗&#8230;</string>

    <string name="loading_image">正在准备图片...</string>
    <string name="register_done_hint">完成</string>
    <string name="register_man_hint">男士</string>
    <string name="register_female_hint">女士</string>
    <string name="retrieve_pwd_step_hint">更改</string>
    <string name="retrieve_pwd_email_label_one">邮箱用户找回密码，请</string>
    <string name="retrieve_pwd_email_label"><a>点击这里</a></string>
    <string name="reset_pwd_hint">请输入至少六位新密码</string>
    <string name="register_pwd_hint">请输入至少六位数密码</string>
    <string name="reset_pwd_submit">确认</string>
    <string name="message_pwd_error">密码错误</string>
    <string name="message_username_null">用户名未填写！！！</string>
    <string name="register_phone_hint">请输入手机号</string>
    <string name="new_password">输入新密码</string>
    <string name="reset_phone">请输入注册用的手机号</string>
    <string name="register">注册</string>
    <string name="add_record">添加</string>
    <string name="menu_user">个人资料</string>
    <string name="menu_account">我的卡包</string>
    <string name="user_exit">注销登录</string>
    <string name="user_del">删除用户</string>
    <string name="menu_card">我的卡包</string>
    <string name="queding">确定</string>
</resources>
