<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myconsume.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

    </fragment>
    <fragment
        android:id="@+id/nav_user"
        android:name="com.example.myconsume.ui.user.UserFragment"
        android:label="@string/menu_user"
        tools:layout="@layout/fragment_user">

    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.myconsume.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.myconsume.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_card"
        android:name="com.example.myconsume.ui.card.CardFragment"
        android:label="@string/menu_card"
        tools:layout="@layout/fragment_card" />
</navigation>