<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lay_retrieve_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_login"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include
        android:id="@+id/ly_retrieve_bar"
        layout="@layout/activity_main_login_navigation_bar" />

    <LinearLayout
        android:id="@+id/ll_retrieve_tel"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/bg_login_input_ok"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_retrieve_tel_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="14dp"
            android:contentDescription="@null"
            app:srcCompat="@mipmap/ic_singup_mobile"
            tools:ignore="RtlHardcoded" />

        <View
            android:layout_width="1px"
            android:layout_height="24dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:background="@color/login_line_color" />

        <EditText
            android:id="@+id/et_reset_phone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/reset_phone"
            android:inputType="phone"
            android:maxLines="1"
            android:minLines="1"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textColor="@color/white"
            android:textColorHint="@color/login_line_color"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/font_16" />

        <ImageView
            android:id="@+id/iv_reset_phone_del"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:contentDescription="@null"
            android:scaleType="fitCenter"
            app:srcCompat="@mipmap/ic_clear"
            android:onClick="onClick"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_retrieve_code"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/bg_login_input_ok"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_retrieve_code_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:contentDescription="@null"
            app:srcCompat="@mipmap/ic_signup_sms" />

        <View
            android:layout_width="1px"
            android:layout_height="24dp"
            android:background="@color/login_line_color" />

        <EditText
            android:id="@+id/et_reset_pwd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/new_password"
            android:inputType="text"
            android:maxLines="1"
            android:minLines="1"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textColor="@color/white"
            android:textColorHint="@color/login_line_color"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/font_16" />

        <ImageView
            android:id="@+id/iv_reset_pwd_del"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:contentDescription="@null"
            android:scaleType="fitCenter"
            app:srcCompat="@mipmap/ic_clear"
            android:onClick="onClick"/>
    </LinearLayout>


    <Button
        android:id="@+id/bt_reset_submit"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/bg_login_submit"
        android:elevation="0dp"
        android:outlineProvider="none"
        android:text="@string/retrieve_pwd_step_hint"
        android:textColor="@color/login_line_color"
        android:textSize="@dimen/font_18"
        tools:targetApi="lollipop"
        android:onClick="onClick"/>




</LinearLayout>